1.8.0 (12.04.2017):

* Added "Writing system" option in "Clean Up" (unpaper) dialogue, affecting
  the order in which the pages are imported when scans are split.
  Closes feature request #94
  (add "Deskew", "Descreen", "Split image" to "Save" dialog)


1.7.3 (12.03.2017):

* Fixed bug presenting blank scan dialog if no devices found. Closes bug #241
  (Scan Document window cannot be opened if no scanner was found)
* Fixed bug updating post-save hooks if save dialog already opened.
  Closes Debian bug #756897 (Specify ways to proof-read document post-save)
* Force resolution to be integer for DjVu to prevent errors whilst saving


1.7.2 (12.02.2017):

* Suppress errors from CLI frontends caused by rounding.
* Reload default scan settings after rescanning for devices.


1.7.1 (11.01.2017):

* Fixed bug setting preferences.
* Fixed bug saving when no post-save hooks defined.
* Fixed bug attaching PDF to email.
  Closes bug #221 (linuxmint - unable to attach scans to mail client)


1.7.0 (04.01.2017):

* + post-save hook.
  Closes feature request #93 (post-save arbitrary command capability)
* + option in Edit/Preferences to force # pages = all if ADF if selected
  Closes feature request #54 (When changing to ADF auto select All)
* + --import command-line option. Closes Launchpad (Ubuntu) bug #312839:
  (needs command line options for Gnome integration)
  Closes Debian bug #852506 (Command-line option to import file)
* Fixed bug preventing append/prepend PDF in combination with set timestamp
* Catch error setting timestamp for dates prior to 1970.
  Closes bug #234 (seems to be stuck after closing the pdf)
* Correctly scale boundary boxes when importing text layer of PDF
* Cherry-picked several merge requests from Chris Mayo fixing tests and
  documentation.
* Fix saving TIFF with compression (introduced in 1.6.0).
  Closes bug #235 (Saving a PNG with alpha channel as TIFF fails)
* Update to Catalan translation (thanks to Davidmp)